syntax = "proto3";

option go_package = "./pb";

package pb;

message EmptyResp{
}

message ToAllReq{
    int32 qos = 1;
    int32 kind = 2;
    bytes message = 3;

}

message ToUserReq{
    string uid = 1;
    int32  qos = 2;
    int32  kind = 3;
    bytes  message = 4;
}

message ToChannelReq{
    string channel = 1;
    int32 qos = 2;
    int32 kind = 3;
    bytes message = 4;
}

message MsgResp{
    int32 total = 1;
    int32 success = 2;
}

message JoinReq{
    string uid = 1;
    map<string,string> channels = 2;
}

message UserReq{
    string uid = 1;
}

message OnlineResp{
    bool ok = 1;
}

message ChannelsResp{
    map<string,string> channels = 1;
}

service CableService{
    
    rpc IsOnline(UserReq) returns (OnlineResp){}
    rpc KickUser(UserReq) returns (EmptyResp){}
    rpc SendToAll(ToAllReq) returns (MsgResp){}
    rpc SendToUser(ToUserReq) returns (MsgResp){}
    rpc SendToChannel(ToChannelReq) returns (MsgResp){}
    rpc JoinChannel(JoinReq) returns (EmptyResp){}
    rpc LeaveChannel(JoinReq) returns (EmptyResp){}
    rpc GetChannels(UserReq) returns (ChannelsResp){}
}
